Bug 48083 - FILEOPEN PPT: Slide Background Fill is none instead of slide color (PPTX fixed in 5.2)
Summary: FILEOPEN PPT: Slide Background Fill is none instead of slide color (PPTX fixe...
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Impress (show other bugs)
Version:
(earliest affected)
Inherited From OOo
Hardware: All All
: medium normal
Assignee: Samuel Mehrbrodt
URL:
Whiteboard: target:24.2.0 target:7.6.3
Keywords: filter:ppt
: 95211 (view as bug list)
Depends on:
Blocks: PPT
  Show dependency treegraph
 
Reported: 2012-03-30 01:53 UTC by sasha.libreoffice
Modified: 2023-10-10 08:12 UTC (History)
5 users (show)

See Also:
Crash report or crash signature:


Attachments
presentation with white ellipsis in middle (18.50 KB, application/vnd.ms-powerpoint)
2012-03-30 01:53 UTC, sasha.libreoffice
Details

Note You need to log in before you can comment on or make changes to this bug.
Description sasha.libreoffice 2012-03-30 01:53:26 UTC
Created attachment 59263 [details]
presentation with white ellipsis in middle

Attached presentation has ellipsis in middle that filled by "Background" color using msPower Point 2003.
In Impress it becomes filled as "None" and becomes unseen instead of white.
reproducible in 3.3.4 and 3.5.1
Comment 1 bfoman (inactive) 2012-08-24 11:39:56 UTC
Confirmed with:
LO 3.5.5.3 
Build ID: own W7 debug build
Windows 7 Professional SP1 64 bit
Comment 2 Xisco Faulí 2014-02-14 13:18:03 UTC
it's still present in:
   - Libreoffice 4.1.4.2 Build ID: 0a0440ccc0227ad9829de5f46be37cfb6edcf72
   - Libreoffice 4.2.0.4 Build ID: 05dceb5d363845f2cf968344d7adab8dcfb2ba71
   - Libreoffice 4.3.0.0.alpha0+ Build ID: e076b5290e706b8a69abd397a9f255eba6a0cd1a
Comment 3 Joel Madero 2015-05-02 15:41:58 UTC Comment hidden (obsolete)
Comment 4 Xisco Faulí 2015-05-04 13:53:32 UTC Comment hidden (obsolete)
Comment 5 QA Administrators 2016-09-20 09:37:45 UTC Comment hidden (obsolete)
Comment 6 Buovjaga 2018-12-20 13:26:51 UTC
*** Bug 95211 has been marked as a duplicate of this bug. ***
Comment 7 Buovjaga 2019-08-23 11:39:38 UTC
Still confirmed

Version: 6.4.0.0.alpha0+ (x64)
Build ID: 3e64065612acec2eb29aa21e2b515953422256d7
CPU threads: 4; OS: Windows 10.0; UI render: default; VCL: win; 
TinderBox: Win-x86_64@62-TDF, Branch:master, Time: 2019-08-15_22:57:26
Locale: fi-FI (fi_FI); UI-Language: en-US
Calc: threaded
Comment 8 Timur 2021-04-19 08:58:18 UTC
Repro 7.2+ for PPT. 
PPTX was fixed in 5.2 repo with bug 93868.
Comment 9 Commit Notification 2023-09-04 17:44:42 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/a43f1ac6c964181cbaa4c889409688197cbf7a2b

tdf#48083 Import mso_fillBackground from ppt

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 10 Commit Notification 2023-09-07 11:56:45 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/76932ec6c45089f3319c4fc211d92d19d92666c3

tdf#48083 Handle mso_fillBackground directly when processing the shape

It will be available in 24.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 11 Commit Notification 2023-10-09 09:14:02 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/4825616aa2700601778183d67ba1d89e32f61b04

tdf#48083 Import mso_fillBackground from ppt

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 12 Commit Notification 2023-10-10 08:12:45 UTC
Samuel Mehrbrodt committed a patch related to this issue.
It has been pushed to "libreoffice-7-6":

https://git.libreoffice.org/core/commit/6b7f23f326b079e6b015b69e5690b40d0ad5817b

tdf#48083 Handle mso_fillBackground directly when processing the shape

It will be available in 7.6.3.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.